# boxnote-converter

./: .gitignore  LICENSE  README.md  This is title.html  output.html  pyproject.toml
boxnote-converter/: docx_parser.py  h2d.py  html_parser.py
boxnote-converter/mapper/: html_mapper.py
example/: This is title.boxnote  This is title.boxnote.docx  This is title.html
resource/My Box Notes/: This is title.boxnote  This is title.html
